--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -50,9 +50,9 @@
                                 <thead>
                                 <tr>
 
-                                    <td colspan="2"><span>项目A 七宝万科购物广场</span></td>
-                                    <td colspan="2"><span>项目B 来福士</span></td>
-                                    <td colspan="2"><span>本项目 七宝宝龙购物广场</span></td>
+                                    <td colspan="2"><span>项目A</span></td><!--七宝万科购物广场-->
+                                    <td colspan="2"><span>项目B</span></td><!-- 来福士-->
+                                    <td colspan="2"><span>本项目</span></td><!--七宝宝龙购物广场-->
                                 </tr>
                                 <tr>                                 
                                     <td><span>比较</span></td>
