--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -45,7 +45,7 @@ html,body{/*position:relative;*/width:100%;height:inherit;overflow: auto;min-hei
 a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 .nav-bracket > li{border-bottom:solid 1px #394152;}
 .nav-bracket > li+li{margin:0;}
-.nav-bracket > li > a {position: relative;padding: 7px 10px; padding-left:46px;  height:44px;line-height:30px;border-radius: 0;color: rgba(255,255,255,.5);font-size:14px;}
+.nav-bracket > li > a {position: relative;z-index:2999;padding: 7px 10px; padding-left:46px;  height:44px;line-height:30px;border-radius: 0;color: rgba(255,255,255,.5);font-size:14px;}
 .nav-bracket > li > a:hover, .nav-bracket > li > a:active { background-color: #3a4255; color: #fff; }
 .nav-bracket > li > a:hover .ys-icon-asset, .nav-bracket > li > a:active .ys-icon-asset,.nav-bracket > li.active > a .ys-icon-asset{background-position: -72px -56px;}
 .nav-bracket > li > a:hover .ys-icon-finacial, .nav-bracket > li > a:active .ys-icon-finacial,.nav-bracket > li.active > a .ys-icon-finacial{background-position: -71px -96px;}
@@ -68,7 +68,11 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 .nav-bracket > li.nav-active > a { background-color:  #3a4255; background-image: url(../images/minus.png); color: #fff; }
 .nav-bracket > li.nav-active > a:hover { background-image: url(../images/minus.png); }
 
-.nav-bracket > li.active > a, .nav-bracket > li.active > a:hover, .nav-bracket > li.active > a:focus { background-color: #3a4255; color: #fff;border-radius: 0;border-left:solid 2px #5ab46e;/*background: none;*/ }
+
+.nav-bracket > li > a{position:relative;z-index:1999;}
+
+.nav-bracket > li.active > a, .nav-bracket > li.active > a:hover, .nav-bracket > li.active > a:focus {
+    background-color: #3a4255; color: #fff;border-radius: 0;border-left:solid 2px #5ab46e;/*background: none;*/ }
 .nav-bracket > li.active > a:hover{background-color: #3a4255;}
 .nav-bracket > li.active > a {}
 .nav-bracket > li.nav-parent.active > a { /*background-image: url(../images/plus.png); */}
