--- a/app/views/datatools/datatool_rent_package.html
+++ b/app/views/datatools/datatool_rent_package.html
@@ -52,7 +52,7 @@
                             <td>{{shop.indoorArea | number:2}}</td>
                             <td>{{shop.form}}</td>
                             <td>{{shop.property}}</td>
-                            <td class="text-right"><i>{{shop.rentStandard | number:2}}</i>元/m&sup2/月</td>
+                            <td class="text-right"><i>{{shop.rentStandard[0] | number:2}}</i>元/m&sup2/月</td>
                         </tr>
                     </tbody>
                 </table>
