--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -118,11 +118,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_1"/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_2"/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_3"/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_4"/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_5"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[0]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[1]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[2]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[3]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[4]"/></div> </td>
                 </tr>
             </tbody>
         </table>
@@ -141,11 +141,11 @@
             </thead>
             <tbody>
             <tr>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_1"/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_2"/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_3"/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_4"/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_5"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[0]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[1]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[2]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[3]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[4]"/></div> </td>
             </tr>
             </tbody>
         </table>
