--- a/app/components/toolbar/rent_package_filter.html
+++ b/app/components/toolbar/rent_package_filter.html
@@ -3,7 +3,7 @@
         <a class="btn btn-default amp-btn" id="toolbar-create" ng-click="fCtrl.addNew()">录入</a>
     </div><!--div toolbar-item-->
     <form name="data_filter">
-        <div class="toolbar-item item-select-filter">
+       <!-- <div class="toolbar-item item-select-filter">
             <label for="select-id-project">项目</label>
             <input type="text" placeholder="" id="select-id-project" name="select-id-project" hidden value="" ng-model="fCtrl.filters.project">
             <div class="dropdown">
@@ -14,7 +14,7 @@
                     <li ng-class="{'active':fCtrl.isActive(menu,fCtrl.filters.project)}" role="presentation" ng-repeat="menu in fCtrl.form_menu.projects"><a role="menuitem" ng-click="fCtrl.setModel('project',menu)">{{menu}}</a></li>
                 </ul>
             </div>
-        </div><!--div toolbar-item-->
+        </div>--><!--div toolbar-item-->
 
         <div class="toolbar-item item-select-filter">
             <label for="select-id-floor">楼层</label>
