--- a/app/views/datatools/datatool_irr_plan.html
+++ b/app/views/datatools/datatool_irr_plan.html
@@ -443,10 +443,12 @@
                                 </tr>
                                 <tr class="tr-sub" data-index="10">
                                     <td ng-repeat="pv in pCtrl.irrData[10].values | take:2 :pCtrl.quitYear ">
-                                        <div class="td-input-wrapper num-input padding-r-15" ng-hide="$index==0">
+                                       <!-- <span>{{}}</span>-->
+                                        <span class=""  ng-hide="$index==0">{{pv.value*100| number:2}}<i class="unit-addon">%</i></span>
+                                       <!-- <div class="td-input-wrapper num-input padding-r-15" >
                                             <input type="text" placeholder="/" data-date="" value="" ng-model="pv.value">
                                             <span class="number-format">{{pv.value*100| number:2}}<i class="unit-addon">%</i></span>
-                                        </div>
+                                        </div>-->
                                     </td>
                                 </tr>
                                 <tr class="tr-sub tr-split-bottom tr-note" data-index="11">
