--- a/app/views/datatools/datatool_irr_plan.html
+++ b/app/views/datatools/datatool_irr_plan.html
@@ -7,7 +7,7 @@
     </div><!--amp-content-header-->
     <form name="irr-form">
     <div class="amp-block">
-        <div class="amp-table-wrapper-swiper" id="irr-plan-table-wrapper">
+        <div class="amp-table-wrapper-swiper" id="irr-plan-table-wrapper" style="height:2580px;">
             <div class="ys-table-fixed-top" style="padding-left:375px;">
                 <div class="ys-table-static ys-table-static-left" style="width:375px;">
                     <table class="table table-no-bordered amp-table table-hover table-header-fixed amp-irr-finacial-table" style="">
