--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -209,14 +209,14 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 
 .open .backdrop, .open-tool .backdrop, .open-panel .backdrop{display: block;  opacity:0.56;}
 
-.rightpanel{ height: 100%; width:0; position: fixed; top: 0; right: 0; background-color: #fff; overflow-x: hidden; padding-top: 0;  z-index:1999;
+.rightpanel{ height: 100%; width:0; position: fixed; top: 0; right: 0; background-color: #fff; overflow-x: hidden; padding-top: 0;  z-index:1999;overflow: hidden;
     -webkit-transition: width 0.3s;
     -moz-transition: width 0.3s;
     -ms-transition: width 0.3s;
     -o-transition: width 0.3s;
     transition: width 0.3s;}
-.open-tool .rightpanel{width:300px;}
-.open-panel .rightpanel{width:60%;}
+.open-tool .rightpanel{width:300px; overflow-y:auto;}
+.open-panel .rightpanel{width:60%;overflow-y:auto;}
 .rightpanel .closebtn { position: absolute; top:4px; left: 10px; width:36px;height:36px;font-size: 36px !important;color:#373c42;cursor:pointer;text-decoration: none;line-height:30px;}
 .rightpanel .closebtn:hover{color:#757575;}
 
