--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -219,3 +219,20 @@ tr.tr-collapse .icon-menu-down {
     background:url(../../images/blank-icon.png) no-repeat center center;
     background-size:162px 149px;
 }
+
+
+.ys-amp-icon{display: block;background-image: url(../../images/icon.png);content: " ";background-repeat: no-repeat;}
+.ys-icon-clock{display: block;position: absolute;width:15px;height:18px;background-position:-712px -198px; top:50%;left:0;margin-top:-8px;}
+.ys-icon-tips{display: block;position: absolute;width:20px;height:20px;background-position:-653px -199px;top:50%;margin-top:-10px;left:0;}
+.ys-icon-tips:hover{background-position:-593px -198px;}
+.ys-icon-tips-hover{background-position:-593px -198px;}
+
+.ys-amp .tooltip.right .tooltip-arrow { top: 50%; left: 0; margin-top: -5px; border-width: 5px 5px 5px 0; border-right-color: #f3f4f8; }
+.ys-amp .tooltip.top .tooltip-arrow { bottom: 0; left: 50%; margin-left: -5px; border-width: 5px 5px 0; border-top-color: #f3f4f8; }
+.ys-amp .tooltip.left .tooltip-arrow { top: 50%; right: 0; margin-top: -5px; border-width: 5px 0 5px 5px; border-left-color: #f3f4f8; }
+.ys-amp .tooltip.bottom .tooltip-arrow { top: 0; left: 50%; margin-left: -5px; border-width: 0 5px 5px; border-bottom-color: #f3f4f8; }
+.ys-amp .tooltip-inner { max-width: 200px; padding: 3px 8px; color: #8592a3; text-align: center; background-color: #f3f4f8; border-radius: 4px; }
+.amp-btn:hover em.ys-icon-tips{background-position:-593px -198px;}
+
+.amp-tipsnote{position:absolute;display: block;top:10px;left:22px;padding: 3px 8px; padding-left:28px; color: #8592a3; text-align: center; background-color: #f3f4f8; border-radius: 4px; font-size: 13px;}
+.amp-tipsnote .ys-icon-tips{left:5px;margin-top:-11px;}
