--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -4,10 +4,10 @@ html,body{/*position:relative;*/width:100%;height:inherit;overflow: auto;min-hei
 .ys-icon{display: block;/*background-size: contain;background-position: center center;*/background-repeat: no-repeat;}
 .ys-icon-spirit{display: block;background-image: url(../../images/main/menu_icon.png);content: " ";}
 .ys-icon-togglebar{position:absolute;top:50%;left:50%;margin-left:-10px;margin-top:-9px;width:20px;height:18px;background-position: -26px -20px;}
-.ys-amp-icon{display: block;background-image: url(../../images/icon.png);content: " ";background-repeat: no-repeat;}
+/*.ys-amp-icon{display: block;background-image: url(../../images/icon.png);content: " ";background-repeat: no-repeat;}
 .ys-icon-clock{display: block;position: absolute;width:15px;height:18px;background-position:-712px -198px; top:50%;left:0;margin-top:-8px;}
 .ys-icon-tips{display: block;position: absolute;width:20px;height:20px;background-position:-652px -198px;top:50%;margin-top:-10px;left:0;}
-.ys-icon-tips-hover{display: block;position: absolute;width:20px;height:20px;background-position:-593px -198px;top:50%;margin-top:-10px;left:0;}
+.ys-icon-tips-hover{display: block;position: absolute;width:20px;height:20px;background-position:-593px -198px;top:50%;margin-top:-10px;left:0;}*/
 
 .ys-icon-asset{position:absolute;top:50%;left:14px;margin-top:-10px;width:20px;height:20px;background-position: -26px -56px;}
 .ys-icon-finacial{position:absolute;top:50%;left:14px;margin-top:-9px;width:20px;height:20px;background-position: -25px -96px;}
