--- a/app/static/css/views/datatools.css
+++ b/app/static/css/views/datatools.css
@@ -320,7 +320,7 @@
     padding-bottom: 38px;
     padding-top: 0;
 }
-#rent-package-result .amp-content-header{margin-bottom:0;height:76px;background-color:#fff;}
+#rent-package-result .amp-content-header{margin-bottom:0;height:76px;background-color:#fff;overflow: visible;}
 #rent-package-result .amp-content-header .amp-header-filter{padding:20px 28px;}
 #rent-package-result .amp-content-header .amp-header-filter>.amp-btn{height:32px;width:100px;line-height: 32px;}
 #rent-package-result .amp-content-header>.amp-header-breadcrumb {
