--- a/app/views/datatools/datatool_rent_package_result.html
+++ b/app/views/datatools/datatool_rent_package_result.html
@@ -4,7 +4,9 @@
 
         <div class="amp-header-filter clearfix">
             <!--<a type="button" class="btn btn-default amp-btn pull-right" ui-sref="rpgpin" href="#/rpgpin" id="btn-rpg-save">保存</a>-->
-            <a type="button" class="btn btn-default amp-btn pull-right" id="btn-rpg-save">保存</a>
+            <a type="button" class="btn btn-default amp-btn pull-right ys-tips" id="btn-rpg-save" data-toggle="tooltip" data-placement="bottom"  title="将于12月15日开放使用">保存</a>
+            <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:36px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用</span>
+
         </div>
     </div><!--amp-content-header-->
     <div class="amp-block-pd">
