--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -300,8 +300,10 @@
                             </div>
                             <div class="block bottom-block bottom-block-fixed clearfix">
                                 <div class="btn-wrapper pull-right">
-                                    <a  class="btn btn-default amp-btn" id="btn-go" ng-click="sCtrl.checkReturn()">查看回报</a>
-                                    <a  class="btn btn-default amp-btn amp-btn-reverse" id="btn-dismiss" ng-click="sCtrl.dismiss()">解约</a>
+                                    <a  class="btn btn-default amp-btn ys-tips" id="btn-go" ng-click="sCtrl.checkReturn()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">查看回报</a>
+                                    <a  class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-dismiss" ng-click="sCtrl.dismiss()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">解约</a>
+                                    <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:16px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用</span>
+
                                 </div>
                             </div>
                     <!--<div class="swiper-scrollbar"></div>-->
