--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -22,13 +22,13 @@
                     </td>
                     <td>
                         <span>总成本</span>
-                        <h3>{{noiCtrl.noiData[2].value | number:0}}</h3>
+                        <h3>{{noiCtrl.noiData[2].value | number:2}}</h3>
                         <span>预测年回报率(按成本)</span>
                         <h5>{{noiCtrl.noiData[3].value | percentFormat}}</h5>
                     </td>
                     <td>
                         <span>估值</span>
-                        <h3>{{noiCtrl.noiData[4].value | number:0}}</h3>
+                        <h3>{{noiCtrl.noiData[4].value | number:2}}</h3>
                         <span>估值日期</span>
                         <h5>{{noiCtrl.noiData[5].value}}</h5>
                         <span>预测年回报率(按估值)</span>
@@ -36,7 +36,7 @@
                     </td>
                     <td>
                         <span>本金</span>
-                        <h3>{{noiCtrl.noiData[7].value | number:0}}</h3>
+                        <h3>{{noiCtrl.noiData[7].value | number:2}}</h3>
                         <span>到期日</span>
                         <h5>{{noiCtrl.noiData[8].value}}</h5>
                         <span>年贷款利息</span>
@@ -44,7 +44,7 @@
                     </td>
                     <td>
                         <span>当前权益</span>
-                        <h3>{{noiCtrl.noiData[10].value | number:0}}</h3>
+                        <h3>{{noiCtrl.noiData[10].value | number:2}}</h3>
                         <span>预测税前现金流</span>
                         <h5>{{noiCtrl.noiData[11].value | number:2}}</h5>
                         <span>预测收益率(按ROE)</span>
@@ -76,7 +76,7 @@
                             <table class="table table-no-bordered amp-table table-hover table-header-fixed" style="width:1500px;" >
                                 <thead>
                                 <tr style="">
-                                    <th colspan="4" ><em><</em>2016-10(万元)</th>
+                                    <th colspan="4" ><em><</em>2016-08(万元)</th>
                                     <th colspan="4" >全年累计(万元)</th>
                                     <th colspan="4" >全年(万元)</th>
                                     <th>达成率</th>
@@ -209,7 +209,7 @@
                                 <tr class="tr-main">
                                     <td ng-repeat="tdData in noiCtrl.incomeData[3].values |skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
-                                    <td>{{34.97|number:2}}%</td>
+                                    <td>{{74.76|number:2}}%</td>
                                 </tr>
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.incomeData[0].values|skip:1"
@@ -229,9 +229,9 @@
                                 </tr>
 
                                 <tr class="tr-main">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[15].values|skip:1"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[12].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
-                                    <td>{{46.71}}%</td>
+                                    <td>{{69.35}}%</td>
 
                                 </tr>
                                 <tr class="tr-sub">
@@ -263,7 +263,7 @@
 
                                 </tr>
 
-                                <tr class="tr-tri" ng-hide="true">
+                              <!--  <tr class="tr-tri" ng-hide="true">
                                     <td ng-repeat="tdData in noiCtrl.feeData[4].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
 
@@ -279,13 +279,32 @@
                                     <td></td>
 
                                 </tr>
+-->
 
 
+                                <tr class="tr-sub">
+                                    <td ng-repeat="tdData in noiCtrl.feeData[4].values|skip:1"
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
+
+                                </tr>
+
+                                <tr class="tr-sub">
+                                    <td ng-repeat="tdData in noiCtrl.feeData[5].values|skip:1"
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
+                                    <td></td>
+                                </tr>
+
+                                <tr class="tr-sub">
+                                    <td ng-repeat="tdData in noiCtrl.feeData[6].values|skip:1"
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
+                                    <td></td>
+
+                                </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[7].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
-
+                                    <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
@@ -298,12 +317,11 @@
                                     <td ng-repeat="tdData in noiCtrl.feeData[9].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
-
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[10].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|number:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
@@ -312,34 +330,16 @@
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
-
-                                <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[12].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
-                                    <td></td>
-                                </tr>
-
-                                <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[13].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
-                                    <td></td>
-                                </tr>
-
-                                <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[14].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
-                                    <td></td>
-                                </tr>
                                 <!-- end -->
                                 </tbody>
                                 <tfoot>
                                 <tr class="tr-main">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[16].values|skip:1"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[13].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
 
                                 </tr>
                                 <tr class="tr-sub">
-                                    <td ng-repeat="tdData in noiCtrl.feeData[17].values|skip:1"
+                                    <td ng-repeat="tdData in noiCtrl.feeData[14].values|skip:1"
                                         ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|percentFormat}}</td>
 
                                 </tr>
